[package]
name = "hypernonsense"
version = "0.4.0"
authors = ["Martin Evans <martindevans@gmail.com>"]
edition = "2018"
repository = "https://github.com/martindevans/hypernonsense"
description = "Locality Sensitive Hashing"
license = "MIT"

[dependencies]
rand = "0.6.5"
bit-vec = "0.5.0"
time = "0.1"
rayon = "1.0.3"