[package]
name = "hypernonsense"
version = "1.0.2"
authors = ["Martin Evans <martindevans@gmail.com>"]
edition = "2018"

# description of the crate
# see https://doc.rust-lang.org/cargo/reference/manifest.html#package-metadata
description = "Using Locality Sensitive hashing to find the nearest points to a query point in extremely high dimensional space."
repository = "https://github.com/martindevans/hypernonsense"
readme = "readme.md"
keywords = ["database", "hash", "search", "vector", "data-structures"]
categories = ["algorithms", "science", "data-structures"] # crates.io/category_slugs
license = "MIT"

[dependencies]
rand = "0.6.5"
bit-vec = "0.5.0"
time = "0.1"
rayon = "1.3.0"
